tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__test.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult {\n    current_tick: manager.current_tick(),\n    tag: \"changes\",\n    move_actions: actions.map.get(&manager.validator()),\n    jump_actions: actions.map.get(&manager.validator()),\n    talk_actions: actions.map.get(&manager.validator()),\n}"

---
SnapshotResult {
    tag: "changes",
    current_tick: 0,
    move_actions: Some(
        [
            Action {
                raw: MoveState,
                entity_id: 1,
                ty: Start {
                    tick: 0,
                    start: 0,
                    end: 990,
                },
            },
            Action {
                raw: MoveState,
                entity_id: 2,
                ty: Start {
                    tick: 0,
                    start: 0,
                    end: 462,
                },
            },
        ],
    ),
    jump_actions: None,
    talk_actions: None,
}
