tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__vacated_entities-2.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult::from_result(\"changes\", manager.current_tick(), &result,\n    &manager.validator())"

---
SnapshotResult {
    tag: "changes",
    current_tick: 7,
    move_actions: Some(
        [
            Action {
                raw: MoveState,
                entity_id: 2,
                ty: End {
                    tick: 7,
                },
            },
        ],
    ),
    jump_actions: None,
    talk_actions: None,
}
