tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__vacated_entities-5.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult::from_result(\"changes\", manager.current_tick(), &result,\n    &manager.validator())"

---
SnapshotResult {
    tag: "changes",
    current_tick: 15,
    move_actions: None,
    jump_actions: None,
    talk_actions: Some(
        [
            Action {
                raw: TalkState,
                entity_id: 1,
                ty: Start {
                    start: 15,
                    end: 60,
                    each: false,
                },
            },
        ],
    ),
}
