tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__vacated_entities-6.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult::from_result(\"changes\", manager.current_tick(), &result,\n    &manager.validator())"

---
SnapshotResult {
    tag: "changes",
    current_tick: 37,
    move_actions: None,
    jump_actions: Some(
        [
            Action {
                raw: JumpState,
                entity_id: 2,
                ty: End {
                    tick: 37,
                    start: 462,
                    end: 2442,
                },
            },
        ],
    ),
    talk_actions: None,
}
