tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__zero_tick_action-2.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult {\n    current_tick: manager.current_tick(),\n    tag: \"test2\",\n    move_actions: actions.map.get(&manager.validator()),\n    jump_actions: actions.map.get(&manager.validator()),\n    talk_actions: actions.map.get(&manager.validator()),\n}"

---
SnapshotResult {
    tag: "test2",
    current_tick: 10,
    move_actions: Some(
        [
            Action {
                raw: MoveState,
                entity_id: 1,
                ty: End {
                    start: 0,
                    end: 10,
                },
            },
            Action {
                raw: MoveState,
                entity_id: 1,
                ty: Start {
                    start: 10,
                    end: 10,
                    each: false,
                },
            },
            Action {
                raw: MoveState,
                entity_id: 1,
                ty: End {
                    start: 10,
                    end: 10,
                },
            },
        ],
    ),
    jump_actions: None,
    talk_actions: None,
}
